update secret swag file
